# ft_ality

./: Cargo.toml  README.md  launch.sh
grammar/: test.gmr
grammar/errors/: empty_sequence.gmr  missing_arrow.gmr
src/: automaton.rs  engine.rs  input.rs  lib.rs  main.rs  parse.rs
src/apps/: cli.rs  sdl.rs
